updated docker files and README

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,10 @@ services:
       context: ./server
     container_name: stomp-server
     ports:
-      - "7777:7777"
+      - "${PORT:-7777}:${PORT:-7777}"
+    environment:
+      PORT: ${PORT:-7777}
+      SERVER_TYPE: ${SERVER_TYPE:-reactor}
     networks:
       - stomp-network
 
@@ -12,12 +15,8 @@ services:
     build:
       context: ./client
     container_name: stomp-client
-    depends_on:
-      - stomp-server
     networks:
       - stomp-network
-    stdin_open: true  # Keep STDIN open
-    tty: true         # Allocate a pseudo-TTY
 
 networks:
   stomp-network:
